cabal-version:      3.0
name:               rwbin
version:            0.1.1.0
synopsis:           Utility for read/write strings in binary form
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             qualimock
maintainer:         qualimock@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable rwbin
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >= 4.10.0,
                      bytestring
    hs-source-dirs:   app
    default-language: Haskell2010
